--- a/gb/16/4/24/n7667503.md
+++ b/gb/16/4/24/n7667503.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/pdz229/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/pdz229/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/pdz229/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/pdz229/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/pdz229/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/pdz229/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/pdz229/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/pdz229/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/pdz229/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/pdz229/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/pdz229/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/pdz229/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/pdz229/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/pdz229/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/pdz229/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/pdz229/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/pdz229/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/pdz229/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/pdz229/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/pdz229/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/pdz229/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>报税了  税额试算通知书帮你省时省力</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2016年04月24日讯】（中央社台北24日电）再过一周就要<ahref="https://github.com/pdz229/djy/blob/master/gb/tag/%E6%8A%A5%E7%A8%8E.md#1">报税</a>了，5区国税局即日起陆续以挂号寄发<ahref="https://github.com/pdz229/djy/blob/master/gb/tag/%E7%A8%8E%E9%A2%9D%E8%AF%95%E7%AE%97%E9%80%9A%E7%9F%A5%E4%B9%A6.md#1">税额试算通知书</a>，纳税义务人收到后，若同意并接受试算结果，只要按通知书指示缴纳税款，即可完成申报手续，省时又省力。</p>
-<p>国税局官员表示，今年综所税结算申报总申报户数近620万户，其中约358万户适用税额试算服务。各区国税局即日起以挂号寄出<ahref="https://github.com/pdz229/djy/blob/master/gb/tag/%E7%A8%8E%E9%A2%9D%E8%AF%95%E7%AE%97%E9%80%9A%E7%9F%A5%E4%B9%A6.md#1">税额试算通知书</a>与邮简，可分为“缴税”与“退税及不缴不退”两类案件，纳税义务人收到通知书后，如同意且接受试算结果，于5月31日前办理，即完成综所税申报手续。</p>
+<p>【大纪元2016年04月24日讯】（中央社台北24日电）再过一周就要<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%8A%A5%E7%A8%8E.md#1">报税</a>了，5区国税局即日起陆续以挂号寄发<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E7%A8%8E%E9%A2%9D%E8%AF%95%E7%AE%97%E9%80%9A%E7%9F%A5%E4%B9%A6.md#1">税额试算通知书</a>，纳税义务人收到后，若同意并接受试算结果，只要按通知书指示缴纳税款，即可完成申报手续，省时又省力。</p>
+<p>国税局官员表示，今年综所税结算申报总申报户数近620万户，其中约358万户适用税额试算服务。各区国税局即日起以挂号寄出<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E7%A8%8E%E9%A2%9D%E8%AF%95%E7%AE%97%E9%80%9A%E7%9F%A5%E4%B9%A6.md#1">税额试算通知书</a>与邮简，可分为“缴税”与“退税及不缴不退”两类案件，纳税义务人收到通知书后，如同意且接受试算结果，于5月31日前办理，即完成综所税申报手续。</p>
 <p>若属“缴税案件”，纳税义务人须依通知书上所载明的“应自行缴纳税额”金额缴纳税款，缴税方式包含至金融机构或便利商店缴税，或采信用卡、缴税取款委托书、自动柜员机ATM、晶片金融卡、活存账户转账或行动支付工具等方式缴税，但4大超商仅接受纳税金额在新台币2万元以下的款项。</p>
 <p>若属“退税及不缴不退案件”，纳税义务人仍要申报，才能获得退税。透过网路至财政部电子申报缴税服务网站线上登录或以书面确认回复，即可轻松完成申报。若想早一点拿到退税，建议采网路申报。</p>
 <p>纳税义务人若在103年度综所税结算申报时，以本人的账户完成缴税或退税，今年申报也可沿用同一账户，只要打免付费电话（0800-000-321），即可透过语音系统回复确认。</p>
@@ -16,42 +16,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/12/4/16/n3567188.md#1">综所税额试算  月底前寄达</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/13/5/9/n3866870.md#1">综所税 台八成民众还未申报</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/14/4/24/n4139690.md#1">台今年报税  免税扣除额有调整</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/16/4/13/n7552164.md#1">在美赶报税末班 请看核对清单别犯错</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/16/4/16/n7560558.md#1">台报税新规今年实施 富人加税小资减税</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/16/4/17/n7563099.md#1">台报税有秘笈  夫妻分开税</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/16/4/18/n7565468.md#1">三年没报税 纽约华裔妇女忧福利受影响</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/16/4/18/n7566312.md#1">报税来不及 可延期申报但要先交税</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/16/4/18/n7567891.md#1">全美500万人赶在今天报税 最后提示在这里</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/16/4/19/n7569401.md#1">美报税近结束 假IRS诈骗开始 5方法可识破</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/12/4/16/n3567188.md#1">综所税额试算  月底前寄达</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/5/9/n3866870.md#1">综所税 台八成民众还未申报</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/4/24/n4139690.md#1">台今年报税  免税扣除额有调整</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/4/13/n7552164.md#1">在美赶报税末班 请看核对清单别犯错</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/4/16/n7560558.md#1">台报税新规今年实施 富人加税小资减税</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/4/17/n7563099.md#1">台报税有秘笈  夫妻分开税</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/4/18/n7565468.md#1">三年没报税 纽约华裔妇女忧福利受影响</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/4/18/n7566312.md#1">报税来不及 可延期申报但要先交税</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/4/18/n7567891.md#1">全美500万人赶在今天报税 最后提示在这里</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/4/19/n7569401.md#1">美报税近结束 假IRS诈骗开始 5方法可识破</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/29/n10435561.md#1" target="_blank">罗思义：一个到死还相信共产党伟大的“学者”</a></li><li><a href="https://github.com/pdz229/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/14/n11111708.md#1" target="_blank">美国务院人权新报告 多次提中共迫害法轮功</a></li>
+<li><a href="https://github.com/ychojm359/ntdtv/blob/master/gb/2022/05/01/a103414939.md#1" target="_blank">加拿大20市镇升旗亮灯 祝贺法轮大法传世30年</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/12/n10478618.md#1" target="_blank">本真：《推背图》预言中美朝日大战及结局（三）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/3/11/n4660107.md#1" target="_blank">修炼法轮功 7旬老人弯成90度的腰直起来</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/5/5/n12085546.md#1">萧茗采访班农：你见了国内出逃科学家吗</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/5/5/n12085740.md#1">华裔病毒研究者遭枪杀 更多细节流出</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/5/5/n12085708.md#1">美B-1B轰炸机出动 中共少将为武统台湾降温</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/5/5/n12083374.md#1">【十字路口】美领军索赔 万亿关税警告中共</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/5/5/n12085541.md#1">川普：知道中共病毒来源 没和习近平通话</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/5/4/n12082975.md#1">“雷神”为巨石强森庆生 石头蛋糕笑翻网友</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/5/5/n12085409.md#1">传遭官方禁止直播卖货 范冰冰公开回应</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/5/6/n12088319.md#1">《战狼》片方高管内讧 原副董事长出逃海外</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/5/4/n12082574.md#1">IG用英文勉励网友 范冰冰微博异样噤声</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/5/5/n12084156.md#1">詹子晴32岁总资产上千万 靠2招成副业女王</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/5/5/n12083937.md#1">美国女童写信给在天堂的小狗 意外收到回信</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/4/20/n12044745.md#1">人居两地 情发一心  宝玉和黛玉的心灵相知</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/5/4/n12082623.md#1">唐朝进士奇闻：耳朵里的天国世界</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/4/25/n12061145.md#1">赵盾一梦“兆绝后好” 满门被灭 孤儿独好</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/4/29/n12068903.md#1">【细语人生】FBI盯上了他（下）</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738652.md#1">惠虎宇：500年风云变幻 俄罗斯帝国荣光不再</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/12/n13734765.md#1">【探索时分】共军鹰击21打航母 美日需要担心？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13740913.md#1">【时事军事】俄军与M777第一次对话 就尝到滋味</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13740789.md#1">【拍案惊奇】李克强不再低调？从刘少奇说起</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740226.md#1">紧跟中共的大V遭封杀 对五毛粉红造成冲击</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739710.md#1">大陆两卫健委官员批清零政策  被指不寻常</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740103.md#1">传广西销毁捧习“口袋书” 相关报导已全删</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740144.md#1">被问会否与周润发再合作 钟楚红：一定不拒绝</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/11/n13733128.md#1">睡醒有眼屎不是坏事！但眼屎过多小心3大警讯</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/pdz229/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/pdz229/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/4/24/n7667503.htm">报税了  税额试算通知书帮你省时省力</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/4/24/n7667503.htm">报税了  税额试算通知书帮你省时省力</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/pdz229/djy/blob/master/gb/16/4/24/n7667503.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/pdz229/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/pdz229/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/pdz229/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/16/4/24/n7667503.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
